2010-06-08  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* configure.ac: Add `.' to the directories searched for unifont.

2010-06-08  Colin Watson  <cjwatson@ubuntu.com>

	* .bzrignore: Add ascii.bitmaps, ascii.h, grub_script.yy.c, and
	grub_script.yy.h.

2010-06-08  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (History): Expand to cover GRUB 2.
	(Serial terminal): Refer to `terminal_input' and `terminal_output'
	commands, not `terminal'.
	(serial): Likewise.
	(terminal_input): New section.
	(terminal_output): New section.
	(uppermem): New section (stub).
	(Obtaining and Building GRUB): Refer to Bazaar, not Subversion.

2010-06-08  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Security): Menu entries are unrestricted by
	default, not restricted to superusers as I had previously thought.
	Reword to account for this.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* kern/emu/misc.c (device_mapper_null_log): New function.
	(grub_device_mapper_supported): New function.
	* include/grub/emu/misc.h (grub_device_mapper_supported): Add
	prototype.
	* kern/emu/hostdisk.c (find_partition_start): Check whether
	device-mapper is supported before trying to use it.
	* util/deviceiter.c (grub_util_iterate_devices): Likewise.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Naming convention): Use GRUB 2 syntax.
	(File name syntax): Likewise.
	(help): --all is no longer supported in GRUB 2.  Be more precise
	about pattern matching.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* normal/completion.c (grub_normal_do_completion): When completing
	arguments to "set" and the current word contains an equals sign,
	skip to after the equals sign before starting completion.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* fs/i386/pc/pxe.c (grub_pxe_open): Fix parsing of gateway_ip.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Network): New section.